--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
+
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -22,6 +23,39 @@
                 text-align: center;
             }
 
+            body{
+                background-color: #955B29;
+            }
+
+            .container{
+                background-color: #F1DDCC;
+            }
+
+            ul {
+                list-style-type: none;
+                margin: 0;
+                padding: 0;
+                overflow: hidden;
+                background-color: #F1DDCC;
+            }
+
+            li{
+                float: left;
+            }
+
+            li a {
+                display: block;
+                color: black;
+                text-align: center;
+                padding: 14px 16px;
+                text-decoration: none;
+            }
+
+            li a:hover:not(.active) {
+                background-color: #F5E9DC;
+            }       
+
+
         </style>
 
     </head>
@@ -30,6 +64,15 @@
 
                 <h1 class="header" style="font-family:'Courier New', Courier, monospace; color: black;"><b>Politiskie režīmi</b></h1>
 
+            <div class="container">        
+                <ul>
+                    <li><a href="#Demokrātija">Demokrātija</a></li>
+                    <li><a href="#Autoritārisms">Autoritārisms</a></li>
+                    <li><a href="#Totalitārisms">Totalitārisms</a></li>
+                    <li style="float:right"><a href="#Atsauces">Atsauces</a></li>
+                    <li style="float:right"><a href="#Valstis">Valstis</a></li>
+                </ul>
+            </div>    
             </div>
         </body>
 </html>
