--- a/index.html
+++ b/index.html
@@ -18,8 +18,10 @@
                 document.getElementById("saturs").classList.remove("d-none") 
                 document.getElementById("Valstis").classList.add("d-none")
                 document.getElementById("atsauces").classList.add("d-none")
-                document.getElementById("imageDA").classList.remove("d-none")
+                document.getElementById("imageD").classList.remove("d-none")
                 document.getElementById("imageS").classList.add("d-none")
+                document.getElementById("imageA").classList.add("d-none")
+                document.getElementById("imageT").classList.add("d-none")
             }
             function Valstisf() {
                 document.getElementById("saturs").classList.add("d-none") 
@@ -31,24 +33,30 @@
                 document.getElementById("saturs").classList.remove("d-none") 
                 document.getElementById("Valstis").classList.add("d-none")
                 document.getElementById("atsauces").classList.add("d-none")
-                document.getElementById("imageDA").classList.remove("d-none")
+                document.getElementById("imageD").classList.add("d-none")
                 document.getElementById("imageS").classList.add("d-none")
+                document.getElementById("imageA").classList.remove("d-none")
+                document.getElementById("imageT").classList.add("d-none")
             }
             function totalitarismsf() {
                 document.getElementById("tekstssaturs").innerHTML = "kkas vēl gudrāks"
                 document.getElementById("saturs").classList.remove("d-none") 
                 document.getElementById("Valstis").classList.add("d-none")
                 document.getElementById("atsauces").classList.add("d-none")
-                document.getElementById("imageDA").classList.add("d-none")
+                document.getElementById("imageD").classList.add("d-none")
                 document.getElementById("imageS").classList.add("d-none")
+                document.getElementById("imageA").classList.add("d-none")
+                document.getElementById("imageT").classList.remove("d-none")
             }
             function sakumalapaf() {
                 document.getElementById("tekstssaturs").innerHTML = "Visgudrākais blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah"
                 document.getElementById("saturs").classList.remove("d-none") 
                 document.getElementById("Valstis").classList.add("d-none")
                 document.getElementById("atsauces").classList.add("d-none")
-                document.getElementById("imageDA").classList.add("d-none")
+                document.getElementById("imageD").classList.add("d-none")
                 document.getElementById("imageS").classList.remove("d-none")
+                document.getElementById("imageA").classList.add("d-none")
+                document.getElementById("imageT").classList.add("d-none")
             }
             function atsaucesf() {
                 document.getElementById("atsauces").classList.remove("d-none")
@@ -158,9 +166,10 @@
                     </div>
                 
                     <div class="col-5">
-                        <img src="https://images.slideplayer.com/16/5026811/slides/slide_2.jpg" class="img" id="imageDA">
-                        <img src="https://media.springernature.com/lw685/springer-static/image/art%3A10.1057%2Fs41304-018-0149-8/MediaObjects/41304_2018_149_Fig1_HTML.gif"
-                            class="img" id="imageS">
+                        <img src="" class="img" alt="Sākuma lapas bilde" id="imageS">
+                        <img src="" alt="Demokrātijas bilde" class="img" id="imageD">
+                        <img src="" alt="Autoritārisma bilde" class="img" id="imageA">
+                        <img src="" alt="Totalitārisma bilde" class="img" id="imageT">
                     </div>
                 
                 </div>
