--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
                     </div>
                 
                     <div class="col-5">
-                        <img src="" class="img" alt="Sākuma lapas bilde" id="imageS">
+                        <img src="" alt="Sākuma lapas bilde" class="img" id="imageS">
                         <img src="" alt="Demokrātijas bilde" class="img" id="imageD">
                         <img src="" alt="Autoritārisma bilde" class="img" id="imageA">
                         <img src="" alt="Totalitārisma bilde" class="img" id="imageT">
@@ -206,17 +206,44 @@
                 <div class="col-4" style="font-family: 'Times New Roman', Times, serif; padding: 15px; text-align: center;">
                     <h3><b>Demokrātiska valsts</b></h3>
                     <p>biskin teksts plus bilde</p>
-                    <button>Bilde</button>
+                    <p class="d-inline-flex gap-1">
+                        <a class="btn btn-light" data-bs-toggle="collapse" href="#multiCollapseExample1" role="button" aria-expanded="false" aria-controls="multiCollapseExample1">
+                          Bilde
+                        </a>
+                      </p>
+                      <div class="collapse multi-collapse" id="multiCollapseExample1">
+                        <div class="card card-body">
+                            <img src="" alt="Demokrātiskas valsts bilde" class="img">
+                        </div>
+                      </div>
                 </div>
                 <div class="col-4" style="font-family: 'Times New Roman', Times, serif; padding: 15px; text-align: center;">
                     <h3><b>Autoritāra valsts</b></h3>
                     <p>biskin teksts plus bilde</p>
-                    <button>Bilde</button>
-                </div>
+                    <p class="d-inline-flex gap-1">
+                        <button class="btn btn-light" type="button" data-bs-toggle="collapse" data-bs-target="#multiCollapseExample2" aria-expanded="false" aria-controls="multiCollapseExample2">
+                          Bilde
+                        </button>
+                      </p>                
+                      <div class="collapse multi-collapse" id="multiCollapseExample2">
+                        <div class="card card-body">
+                            <img src="" alt="Autoritāras valsts bilde" class="img">
+                        </div>
+                      </div>
+                    </div>
                 <div class="col-4" style="font-family: 'Times New Roman', Times, serif; padding: 15px; text-align: center;">
                     <h3><b>Totalitāra valsts</b></h3>
                     <p>biskin teksts plus bilde</p>
-                    <button>Bilde</button>
+                    <p class="d-inline-flex gap-1">
+                        <button class="btn btn-light" type="button" data-bs-toggle="collapse" data-bs-target="#multiCollapseExample3" aria-expanded="false" aria-controls="multiCollapseExample3">
+                            Bilde
+                          </button>
+                      </p> 
+                      <div class="collapse multi-collapse" id="multiCollapseExample3">
+                        <div class="card card-body">
+                            <img src="" alt="Totalitāras valsts bilde" class="img">
+                        </div>
+                      </div>               
                 </div>
             </div>
             </div>
