--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             function demokratijaf() {
                 pasleptSaturu()
                 document.getElementById("tvirs").innerHTML = "Demokrātija"
-                document.getElementById("tekstssaturs").innerHTML = "kkas gudrs"
+                document.getElementById("tekstssaturs").innerHTML = "Demokrātija ir valdības forma, kurā varas izcelsme un izmantošana ir pamatota uz pilsoņu līdzdalību un to vēlēšanu rezultātiem."
                 document.getElementById("saturs").classList.remove("d-none") 
                 document.getElementById("Valstis").classList.add("d-none")
                 document.getElementById("atsauces").classList.add("d-none")
@@ -23,7 +23,7 @@
                 document.getElementById("imageS").classList.add("d-none")
                 document.getElementById("imageA").classList.add("d-none")
                 document.getElementById("imageT").classList.add("d-none")
-                document.getElementById("radamaisteksts").innerHTML = "demoktratijas teksts"
+                document.getElementById("radamaisteksts").innerHTML = "Šajā sistēmā politiskie lēmumi tiek pieņemti, ņemot vērā plašu sabiedrības viedokļu spektru, un cilvēkiem ir tiesības izvēlēties savus pārstāvjus valsts iestādēs. Demokrātija veicina individuālo brīvību, tiesiskumu, cilvēktiesības un valsts iestāžu pārredzamību."
             }
             function Valstisf() {
                 pasleptSaturu()
@@ -34,7 +34,7 @@
             function autoritarismsf() {
                 pasleptSaturu()
                 document.getElementById("tvirs").innerHTML = "Autoritārisms"
-                document.getElementById("tekstssaturs").innerHTML = "kkas gudrāks"
+                document.getElementById("tekstssaturs").innerHTML = "Autoritārisms ir valdības forma, kurā varas koncentrācija ir centrēta ap ierobežotu vadītāju vai grupu, un šī varas grupa bieži vien ir spēcīgi kontrolējoša un ierobežo pilsoņu politisko un sabiedrisko brīvību."
                 document.getElementById("saturs").classList.remove("d-none") 
                 document.getElementById("Valstis").classList.add("d-none")
                 document.getElementById("atsauces").classList.add("d-none")
@@ -42,12 +42,12 @@
                 document.getElementById("imageS").classList.add("d-none")
                 document.getElementById("imageA").classList.remove("d-none")
                 document.getElementById("imageT").classList.add("d-none")
-                document.getElementById("radamaisteksts").innerHTML = "autoritarisma teksts"
+                document.getElementById("radamaisteksts").innerHTML = "Autoritārie režīmi var ietvert gan militārās huntas, gan viena vadītāja valdīšanu, kur varas lēmumi tiek pieņemti bez ievērojama pilsoņu līdzdalības vai iestāžu neatkarības. Šāda tipa valdības tendēcijas ietekmē varas iegūšana un uzturēšana, nereti arī ar represīvu policijas kontroli un ierobežojumiem plašsaziņas līdzekļiem. Autoritārisms atšķiras no demokrātijas, jo tajā centrālā varas loma ir stipri koncentrēta un pilsoņiem var būt ierobežotas tiesības piedalīties politiskajā procesā."
             }
             function totalitarismsf() {
                 pasleptSaturu()
                 document.getElementById("tvirs").innerHTML = "Totalitārisms"
-                document.getElementById("tekstssaturs").innerHTML = "kkas vēl gudrāks"
+                document.getElementById("tekstssaturs").innerHTML = "Totalitārisms ir valdības forma, kas raksturojas ar absolūtu un visaptverošu varas koncentrāciju, kur valsts cenšas kontrolēt gandrīz visus dzīves aspektus, ieskaitot politiku, ekonomiku, kultūru un sabiedrības vērtības."
                 document.getElementById("saturs").classList.remove("d-none") 
                 document.getElementById("Valstis").classList.add("d-none")
                 document.getElementById("atsauces").classList.add("d-none")
@@ -55,12 +55,12 @@
                 document.getElementById("imageS").classList.add("d-none")
                 document.getElementById("imageA").classList.add("d-none")
                 document.getElementById("imageT").classList.remove("d-none")
-                document.getElementById("radamaisteksts").innerHTML = "totalitarisma teksts"
+                document.getElementById("radamaisteksts").innerHTML = " Totalitārisms atšķiras no autoritārisma ar to, ka tas prasa pilnīgu pakļaušanos valsts ideoloģijai, kas parasti ir impēratoriska un pārvalda gan privāto, gan publisko dzīvi. Šāda veida režīmi izmanto propagandu, masveida izsekošanu, represijas un citus līdzekļus, lai sasniegtu absolūtu kontroli. Slaveni piemēri totalitārisma ir bijušās Padomju Savienības un Hitlera vadītās Nacistu Vācijas režīmi. Šajās valstīs varas iestādes centās pilnībā izmainīt sabiedrības domas un kontrolēt cilvēku uzvedību, pielietojot sistemātisku represiju un manipulāciju. Totalitārisma rezultātā var tikt nopietni ierobežotas cilvēktiesības un individuālā brīvība.s"
             }
             function sakumalapaf() {
                 pasleptSaturu()
                 document.getElementById("tvirs").innerHTML = "Sākuma lapa"
-                document.getElementById("tekstssaturs").innerHTML = "Visgudrākais blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah"
+                document.getElementById("tekstssaturs").innerHTML = "Demokrātija, autoritārisms un totalitārisms raksturo dažādus politiskos režīmus ar atšķirīgām valdīšanas formām un pilsoņu piedalīšanās pakāpēm."
                 document.getElementById("saturs").classList.remove("d-none") 
                 document.getElementById("Valstis").classList.add("d-none")
                 document.getElementById("atsauces").classList.add("d-none")
@@ -68,7 +68,7 @@
                 document.getElementById("imageS").classList.remove("d-none")
                 document.getElementById("imageA").classList.add("d-none")
                 document.getElementById("imageT").classList.add("d-none")
-                document.getElementById("radamaisteksts").innerHTML = "sakuma lapas teksts"
+                document.getElementById("radamaisteksts").innerHTML = "Demokrātijā cilvēki iegūst iespēju paust savu viedokli, savukārt autoritārisms ietver centrāli vadītu valdību, kurā varas iestādes stipri kontrolē sabiedrību. Totalitārisms, savukārt, izceļas ar pilnīgu varas koncentrāciju, kontrolējot visus dzīves aspektus. Šie politiskie modeli rada dažādus līmeņus brīvības un lēmumu pieņemšanas procesos, atspoguļojot dažādas filozofijas par valsts vadību."
                 
             }
             function atsaucesf() {
@@ -86,18 +86,8 @@
                 document.getElementById("PogaRadit").style.display="block"
             }
             function majaslapaload() {
-                document.getElementById("tvirs").innerHTML = "Sākuma lapa"
-                document.getElementById("tekstssaturs").innerHTML = "Visgudrākais blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah"
-                document.getElementById("saturs").classList.remove("d-none") 
-                document.getElementById("Valstis").classList.add("d-none")
-                document.getElementById("atsauces").classList.add("d-none")
-                document.getElementById("imageD").classList.add("d-none")
-                document.getElementById("imageS").classList.remove("d-none")
-                document.getElementById("imageA").classList.add("d-none")
-                document.getElementById("imageT").classList.add("d-none")
-                document.getElementById("radamaisteksts").innerHTML = "sakuma lapas teksts"
-                document.getElementById("RadamaisSaturs").style.display="none"
-                document.getElementById("PogaRadit").style.display="block"
+                pasleptSaturu()
+                sakumalapaf()               
                 
             }
         </script>
