--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                 document.getElementById("imageS").classList.add("d-none")
                 document.getElementById("imageA").classList.add("d-none")
                 document.getElementById("imageT").classList.remove("d-none")
-                document.getElementById("radamaisteksts").innerHTML = " Totalitārisms atšķiras no autoritārisma ar to, ka tas prasa pilnīgu pakļaušanos valsts ideoloģijai, kas parasti ir impēratoriska un pārvalda gan privāto, gan publisko dzīvi. Šāda veida režīmi izmanto propagandu, masveida izsekošanu, represijas un citus līdzekļus, lai sasniegtu absolūtu kontroli. Slaveni piemēri totalitārisma ir bijušās Padomju Savienības un Hitlera vadītās Nacistu Vācijas režīmi. Šajās valstīs varas iestādes centās pilnībā izmainīt sabiedrības domas un kontrolēt cilvēku uzvedību, pielietojot sistemātisku represiju un manipulāciju. Totalitārisma rezultātā var tikt nopietni ierobežotas cilvēktiesības un individuālā brīvība.s"
+                document.getElementById("radamaisteksts").innerHTML = " Totalitārisms atšķiras no autoritārisma ar to, ka tas prasa pilnīgu pakļaušanos valsts ideoloģijai, kas parasti ir impēratoriska un pārvalda gan privāto, gan publisko dzīvi. Šāda veida režīmi izmanto propagandu, masveida izsekošanu, represijas un citus līdzekļus, lai sasniegtu absolūtu kontroli. Slaveni piemēri totalitārisma ir bijušās Padomju Savienības un Hitlera vadītās Nacistu Vācijas režīmi. Šajās valstīs varas iestādes centās pilnībā izmainīt sabiedrības domas un kontrolēt cilvēku uzvedību, pielietojot sistemātisku represiju un manipulāciju. Totalitārisma rezultātā var tikt nopietni ierobežotas cilvēktiesības un individuālā brīvības."
             }
             function sakumalapaf() {
                 pasleptSaturu()
@@ -88,7 +88,6 @@
             function majaslapaload() {
                 pasleptSaturu()
                 sakumalapaf()               
-                
             }
         </script>
         
