--- a/index.html
+++ b/index.html
@@ -111,7 +111,10 @@
             }
 
             body{
-                background-color: rgba(227, 235, 244, 1);
+                background-image: url(https://static.vecteezy.com/system/resources/previews/026/367/970/original/wavy-white-gradation-white-background-illustration-of-background-free-vector.jpg);
+                background-repeat: no-repeat;
+                background-attachment: fixed;
+                margin: 0;
             }
 
             .container{
@@ -172,25 +175,31 @@
             <div class="container-fluid">
 
                 <h1 class="header"><b>Politiskie režīmi</b></h1>
+
                     <hr>
+
                     <div class="container-fluid">
                         <div class="row-sm">
                 <ul>
-                    <li><a onclick="demokratijaf()" href="#Demokrātija" class="navipogas">Demokrātija</a></li>
-                    <li><a onclick="autoritarismsf()" href="#Autoritārisms" class="navipogas">Autoritārisms</a></li>
-                    <li><a onclick="totalitarismsf()" href="#Totalitārisms" class="navipogas">Totalitārisms</a></li>
-                    <li style="float:right" class="navipogas"><a onclick="atsaucesf()" href="#Atsauces">Atsauces</a></li>
-                    <li style="float:right" class="navipogas"><a onclick="Valstisf()" href="#Valstis">Valstis</a></li>
-                    <li style="float:right" class="navipogas"><a onclick="sakumalapaf()" href="#Sākuma lapa">Sākuma lapa</a></li>
+                    <li style="float: left;"><a onclick="demokratijaf()" href="#Demokrātija" class="navipogas">Demokrātija</a></li>
+                    <li style="float: left;"><a onclick="autoritarismsf()" href="#Autoritārisms" class="navipogas">Autoritārisms</a></li>
+                    <li style="float: left;"><a onclick="totalitarismsf()" href="#Totalitārisms" class="navipogas">Totalitārisms</a></li>
+                    <li style="float:right"><a onclick="atsaucesf()" href="#Atsauces" class="navipogas">Atsauces</a></li>
+                    <li style="float:right"><a onclick="Valstisf()" href="#Valstis" class="navipogas">Valstis</a></li>
+                    <li style="float:right"><a onclick="sakumalapaf()" href="#Sākuma lapa" class="navipogas">Sākuma lapa</a></li>
                 </ul>
                         </div>
                     </div>
+
                     <hr>
+
                 <div class="container" style="background-color: rgba(140, 140, 172, 0.5);">
                 <div id="saturs" class="row">
-                    <div class="col-sm-7">
+                    <div class="col-sm-6">
                         <h2 class="header" style="text-align: left; padding-left: 0px; padding-bottom: 0px;" id="tvirs"></h2>
+
                         <hr>
+
                 <p class="teksts" style="text-align: left;" id="tekstssaturs"></p>
                 <button type="button" class="btn btn-light" style="padding-left: 10px; margin-bottom: 10px;" id="PogaRadit" onclick="raditSaturu()">Rādīt vairāk</button>
                 <div id="RadamaisSaturs">
@@ -199,7 +208,7 @@
                 </div>
                     </div>
                 
-                    <div class="col-sm-5">
+                    <div class="col-sm-6">
                         <img src="https://ourworldindata.org/grapher/thumbnail/political-regime.png?imType=og" alt="Sākuma lapas bilde" class="img-fluid" style="padding-top: 10px; padding-bottom: 10px;" id="imageS">
                         <img src="" alt="Demokrātijas bilde" class="img" id="imageD">
                         <img src="" alt="Autoritārisma bilde" class="img" id="imageA">
@@ -260,7 +269,9 @@
                 </div>
             </div>
             </div>
+
             <hr>
+            
             </div>
             <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
             <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
